--- a/src/components/SendTransaction/DetailsPanel/Options/FeeSelector/WalletDiscountBanner/WalletDiscountBanner.module.scss
+++ b/src/components/SendTransaction/DetailsPanel/Options/FeeSelector/WalletDiscountBanner/WalletDiscountBanner.module.scss
@@ -11,8 +11,7 @@
   font-size: 18px;
   font-weight: 500;
   padding: 10px;
-  // background-color: $ambire-purple;
-  background-color: red;
+  background-color: $ambire-purple;
   justify-content: space-between;
   gap: 15px;
 
