--- a/src/variables.scss
+++ b/src/variables.scss
@@ -71,6 +71,7 @@ $warning-background-color: $c-half-spanish-white;
 $success-background-color: #C8FFFE;
 $info-color: #7189ff;
 $info-background-color: #EDE2FF;
+$alert-text-color: $c-martinique-light;
 
 $ambire-dark-blue: #6000FF;
 $ambire-purple: #AF50FF;
